--- a/app/views/events/_event_card.html.erb
+++ b/app/views/events/_event_card.html.erb
@@ -1,4 +1,4 @@
-<article class="event-card" data-regions="<%= event.location_region_keys %>" data-cities="<%= event.location_city_values %>" data-event-type="<%= event.event_type %>">
+<article class="event-card" data-regions="<%= event.location_region_keys %>" data-cities="<%= event.location_city_values %>" data-event-type="<%= event.event_type %>" data-month="<%= event.start_date.strftime('%Y-%m') %>">
   <a class="event-card-link" href="<%= event_path(event) %>">
     <div class="event-card-header">
       <span class="<%= event_type_badge_class(event.event_type) %>">
