--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -124,7 +124,7 @@
     </main>
 
     <footer class="container site-footer">
-      <small>NZ Tech Events &copy; <%= Date.current.year %></small>
+      <small>Free. <a href="https://github.com/ro-savage/nz-tech-events">Open Source</a>. No Ads. No Tracking. <a href="<%= about_path %>">Built for Good</a>.</small>
     </footer>
 
     <script>
