--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,7 +5,7 @@
     <h1>About NZ Tech Events</h1>
   </header>
 
-  <p>NZ Tech Events was created to create a free, single source to find and share tech events across New Zealand.</p> 
+  <p>NZ Tech Events was created to provide a free, single source to find and share tech events across New Zealand.</p> 
   <p>It was created by <a href="https://www.linkedin.com/in/savagerowan" target="_blank" rel="noopener">Rowan</a> as a side project to help the tech community, no ads, no sponsors and no profit motive, just an easy to find out whats happening locally.</p>
 
   <h2>For Event Organisers</h2>
