--- a/app/views/events/_event_card.html.erb
+++ b/app/views/events/_event_card.html.erb
@@ -1,33 +1,31 @@
-<article class="event-card" data-regions="<%= event.location_region_keys %>" data-cities="<%= event.location_city_values %>" data-event-type="<%= event.event_type %>" data-month="<%= event.start_date.strftime('%Y-%m') %>">
-  <a class="event-card-link" href="<%= event_path(event) %>">
-    <div class="event-card-header">
-      <span class="<%= event_type_badge_class(event.event_type) %>">
-        <%= event.event_type.titleize %>
+<a href="<%= event_path(event) %>" class="event-card" data-regions="<%= event.location_region_keys %>" data-cities="<%= event.location_city_values %>" data-event-type="<%= event.event_type %>" data-month="<%= event.start_date.strftime('%Y-%m') %>">
+  <div class="event-card-header">
+    <span class="<%= event_type_badge_class(event.event_type) %>">
+      <%= event.event_type.titleize %>
+    </span>
+    <span class="badge <%= event.free? ? 'badge-free' : 'badge-paid' %>">
+      <%= event.cost.presence || "Free" %>
+    </span>
+  </div>
+
+  <h3 class="event-card-title">
+    <%= event.title %>
+  </h3>
+
+  <p class="event-meta">
+    <%= event.formatted_date %>
+    <% if event.formatted_time %>
+      &bull; <%= event.formatted_time %>
+    <% end %>
+    &bull;
+    <% if event.multi_location? %>
+      <span class="location-hover" title="<%= event.locations_tooltip %>">
+        <%= event.location_regions_display %>
       </span>
-      <span class="badge <%= event.free? ? 'badge-free' : 'badge-paid' %>">
-        <%= event.cost.presence || "Free" %>
-      </span>
-    </div>
+    <% else %>
+      <%= event.primary_location&.full_display || event.region_display %>
+    <% end %>
+  </p>
 
-    <h3 class="event-card-title">
-      <%= event.title %>
-    </h3>
-
-    <p class="event-meta">
-      <%= event.formatted_date %>
-      <% if event.formatted_time %>
-        &bull; <%= event.formatted_time %>
-      <% end %>
-      &bull;
-      <% if event.multi_location? %>
-        <span class="location-hover" title="<%= event.locations_tooltip %>">
-          <%= event.location_regions_display %>
-        </span>
-      <% else %>
-        <%= event.primary_location&.full_display || event.region_display %>
-      <% end %>
-    </p>
-
-    <div class="event-summary"><%= simple_format(event.display_summary) %></div>
-  </a>
-</article>
+  <div class="event-summary"><%= simple_format(event.display_summary) %></div>
+</a>
