Add all events to email

--- a/app/views/email_subscriptions/new.html.erb
+++ b/app/views/email_subscriptions/new.html.erb
@@ -4,7 +4,7 @@
 <article>
   <header>
     <h1>Subscribe to Weekly Email Updates</h1>
-    <p>Get a weekly digest of new and upcoming tech events in your region, delivered every Monday morning.</p>
+    <p>Get a weekly digest of new and upcoming tech events in your region and across New Zealand, delivered every Monday.</p>
   </header>
 
   <%= form_with model: @email_subscription, url: email_subscriptions_path do |f| %>
