--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -18,6 +18,11 @@
     Our source code is found on <a href="https://github.com/ro-savage/nz-tech-events" target="_blank" rel="noopener">Github</a>. Feel free to contribute, or fork it to use for your own event calendar needs.
   </p>
 
+  <h2>Privacy</h2>
+  <p>
+    NZ Tech Events won't do anything that invades your privacy, no ads, no trackers, and your email address is used only for whatever you enter them for. 
+  </p>
+
   <h2>Contact</h2>
   <p>
     Feel free to find me on LinkedIn and send a message if you have any questions or suggestions!
