--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,6 +23,11 @@
     NZ Tech Events won't do anything that invades your privacy, no ads, no trackers, and your email address is used only for whatever you enter them for. 
   </p>
 
+  <h2>Thanks</h2>
+  <p>
+    <a href="https://www.linkedin.com/in/paulisosaw/">Pauli</a> has been keeping a list of NZ events long before this site and many events are sourced from her excellent <a href="https://docs.google.com/spreadsheets/d/1MpH9z4vZnHhYdvmMIYQyht69H4krUye9mEWSXmn81as/edit?usp=sharing">spreadsheet</a>.
+  </p>
+
   <h2>Contact</h2>
   <p>
     Feel free to find me on LinkedIn and send a message if you have any questions or suggestions!
