--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,6 +92,7 @@
                 </a>
               </li>
               <li><a href="<%= users_path %>" class="nav-link">Users</a></li>
+              <li><a href="<%= admin_subscribers_path %>" class="nav-link">Subscribers</a></li>
             <% end %>
           <% end %>
           <li><a href="<%= about_path %>" class="nav-link">About</a></li>
